--- a/style/pages/login.css
+++ b/style/pages/login.css
@@ -6,7 +6,7 @@
 .ld-login >.ld-wrapper >.ld-header{
     height: var(--ld-header-size);
     width: 100%;
-    background: green;
+    background: white;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
     position: fixed;
     left: 0;
