--- a/style/pages/login.css
+++ b/style/pages/login.css
@@ -11,12 +11,21 @@
     position: fixed;
     left: 0;
     top: 0;
-
 }
+.ld-login >.ld-wrapper >.ld-header >.wrapper >.image-wrapper{
+    height: var(--ld-header-size);
+    padding: 16px 0;
+}
+
+.ld-login >.ld-wrapper >.ld-header >.wrapper >.image-wrapper >.image{
+    height: 100%;
+}
+
 .ld-login >.ld-wrapper >.ld-header >.wrapper{
     max-width: var(--ld-main-wrapper);
     margin: 0 auto;
-    background-color: greenyellow;
+    display: flex;
+    justify-content: center;
 }
 
 .ld-login >.ld-wrapper >.main-content{
